# agent-server

codex-rs/: Cargo.toml
codex-rs/adapter/: Cargo.toml  build.rs
codex-rs/adapter/proto/: adapter.proto
codex-rs/adapter/src/: main.rs
codex-rs/adapter/tests/python/: run_test.sh  test_client.py
codex-rs/adapter/tests/python/proto_gen/: adapter_pb2.py  adapter_pb2_grpc.py
