[package]
name = "codex-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
async-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
tempfile = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = "0.11"